# N3L_SciML

./: .gitignore  Manifest.toml  OPTIMIZATION_IMPROVEMENTS.md  Project.toml  README.md  generate_data.py  n3l_gurobi.jl  no_three_in_line.py  pyproject.toml  run_training.sh  ude.jl  ude_blackbox.jl  ude_combined.jl  ude_energy.jl  ude_n3l.jl  viz.jl  viz_combined.jl
old/: ude_blackbox.jl  ude_energy.jl
viz/: viz.jl  viz_energy.jl  viz_lotka.jl
